--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,21 @@
   "name": "주식 시세 PWA",
   "short_name": "주식시세",
   "description": "주식 현재 시세를 실시간으로 확인하는 Progressive Web App",
-  "start_url": "/",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#2196F3",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "./icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
